# OpnSenseConfigurator

./: .gitignore  README.md  pyproject.toml
src/opnsense_configurator/: __init__.py  cli.py  client.py  models.py
tests/: test_cli.py  test_client.py
